# advent-of-code-2022

./: .gitignore  README.md  mypy.ini  pyproject.toml  run-day.sh  setup.sh  tox.ini
src/day_01/: script.py
src/day_02/: script.py  script_2.py
src/day_03/: script.py
src/day_04/: script.py
src/day_05/: script.py
src/day_06/: script.py
src/day_07/: script.py
src/day_08/: script.py
src/day_09/: script.py
src/day_10/: script.py
src/day_11/: script.py
src/day_12/: script.py
src/day_13/: script.py
src/utils/: input.py
